# claudius

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/plans/: 2025-01-01-claudius-completion.md
src/claudius/: __init__.py  __main__.py  budget.py  chat.py  cli.py  commands.py  config.py  estimation.py  pricing.py  proxy.py  repl.py  router.py  ui.py
tests/: __init__.py  test_budget.py  test_chat.py  test_cli_main.py  test_cli_status_line.py  test_commands.py  test_cost_tracking.py  test_estimation.py  test_pricing.py  test_proxy.py  test_rate_limit.py  test_repl.py  test_router.py  test_ui.py
