# ABOUTME: Python package configuration for Claudius
# ABOUTME: Defines dependencies, build settings, and CLI entry points

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudius"
version = "0.1.0"
description = "Your AI Budget Guardian - Smart Claude API cost management with auto-routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cesuygun", email = "cesuygun@users.noreply.github.com" }
]
keywords = [
    "claude",
    "anthropic",
    "ai",
    "llm",
    "budget",
    "cost-management",
    "cli",
    "proxy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "toml>=0.10.2",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-toml>=0.10.0",
]

[project.scripts]
claudius = "claudius.__main__:main"

[project.urls]
Homepage = "https://github.com/cesuygun/claudius"
Documentation = "https://github.com/cesuygun/claudius#readme"
Repository = "https://github.com/cesuygun/claudius.git"
Issues = "https://github.com/cesuygun/claudius/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudius"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
